<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/camera"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/dialog1"
        android:text="@string/camera"
        android:textSize="18sp" >
    </Button>

    <Button
        android:id="@+id/text"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/dialog2"
        android:text="@string/text"
        android:textSize="18sp" >
    </Button>
    
        <Button
        android:id="@+id/cancel"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/dialog3"
        android:textSize="18sp" 
        android:text="@string/cancel">
    </Button>

</LinearLayout>